--- a/Blockbusta/Blockbusta.csproj
+++ b/Blockbusta/Blockbusta.csproj
@@ -179,6 +179,38 @@
     <Compile Include="Migrations\202003090616261_Initial.Designer.cs">
       <DependentUpon>202003090616261_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003090706525_Update.cs" />
+    <Compile Include="Migrations\202003090706525_Update.Designer.cs">
+      <DependentUpon>202003090706525_Update.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003090713238_Update1.cs" />
+    <Compile Include="Migrations\202003090713238_Update1.Designer.cs">
+      <DependentUpon>202003090713238_Update1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003090714052_Initial1.cs" />
+    <Compile Include="Migrations\202003090714052_Initial1.Designer.cs">
+      <DependentUpon>202003090714052_Initial1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003090715090_Initial2.cs" />
+    <Compile Include="Migrations\202003090715090_Initial2.Designer.cs">
+      <DependentUpon>202003090715090_Initial2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003090716029_Update2.cs" />
+    <Compile Include="Migrations\202003090716029_Update2.Designer.cs">
+      <DependentUpon>202003090716029_Update2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003090718564_Update3.cs" />
+    <Compile Include="Migrations\202003090718564_Update3.Designer.cs">
+      <DependentUpon>202003090718564_Update3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003090720268_update4.cs" />
+    <Compile Include="Migrations\202003090720268_update4.Designer.cs">
+      <DependentUpon>202003090720268_update4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202003091442302_update5.cs" />
+    <Compile Include="Migrations\202003091442302_update5.Designer.cs">
+      <DependentUpon>202003091442302_update5.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -189,6 +221,8 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomerFormViewModel.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-lumen.css" />
@@ -247,17 +281,16 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Movies\Index1.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Customer\Details.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
-    <Content Include="Views\Customer\New.cshtml" />
+    <Content Include="Views\Customer\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -275,6 +308,30 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202003090616261_Initial.resx">
       <DependentUpon>202003090616261_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003090706525_Update.resx">
+      <DependentUpon>202003090706525_Update.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003090713238_Update1.resx">
+      <DependentUpon>202003090713238_Update1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003090714052_Initial1.resx">
+      <DependentUpon>202003090714052_Initial1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003090715090_Initial2.resx">
+      <DependentUpon>202003090715090_Initial2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003090716029_Update2.resx">
+      <DependentUpon>202003090716029_Update2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003090718564_Update3.resx">
+      <DependentUpon>202003090718564_Update3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003090720268_update4.resx">
+      <DependentUpon>202003090720268_update4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003091442302_update5.resx">
+      <DependentUpon>202003091442302_update5.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
